# imeme

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  logging.toml  pyproject.toml  run-tests.ps1  run-tests.sh  setup.py  sync-template.toml
.github/workflows/: ci.yml
imeme/: __main__.py
imeme/_core/: caching.py  configuration.py  json_wrapper.py  language.py  logging.py  telegram.py  text_recognition.py  typesense.py
imeme/_core/telegram/: __init__.py  constants.py  fetching.py  image.py  main.py  messages.py  peer.py
imeme/_core/utils/: __init__.py  default_mapping.py  io.py  iterating.py  streams.py
